remove importance from radio inputs, add oo-ui-input and button.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -288,65 +288,104 @@
 
     .cdx-radio__input {
       + .cdx-radio__icon, &:enabled + .cdx-radio__icon {
-        background-color: @base !important;
-        border-color: @surface0 !important;
+        background-color: @base;
+        border-color: @surface0;
       }
 
       &:hover + .cdx-radio__icon {
-        background-color: @accent !important;
+        background-color: @accent;
       }
 
       &:active + .cdx-radio__icon, &:focus-within + .cdx-radio__icon {
-        background-color: darken(@accent, 10%) !important;
-        border-color: @surface0 !important;
+        background-color: darken(@accent, 10%);
+        border-color: @surface0;
       }
 
       &:checked {
         + .cdx-radio__icon {
-          background-color: @surface0 !important;
-          border-color: @accent !important;
+          background-color: @surface0;
+          border-color: @accent;
         }
 
         &:hover + .cdx-radio__icon {
-          background-color: darken(@accent, 5%) !important;
-          border-color: @surface0 !important;
+          background-color: darken(@accent, 5%);
+          border-color: @surface0;
         }
       }
 
       &:disabled + .cdx-radio__icon {
-        border-color: @mantle !important;
+        border-color: @mantle;
       }
     }
 
     .oo-ui-radioInputWidget [type="radio"] {
       + span, &:enabled + span {
-        background-color: @base !important;
-        border-color: @surface0 !important;
+        background-color: @base;
+        border-color: @surface0;
       }
 
       &:hover + span {
-        background-color: @accent !important;
+        background-color: @accent;
       }
 
       &:active + span, &:focus-within + span {
-        background-color: darken(@accent, 10%) !important;
-        border-color: @surface0 !important;
+        background-color: darken(@accent, 10%);
+        border-color: @surface0;
       }
 
       &:checked {
         + span {
-          background-color: @surface0 !important;
-          border-color: @accent !important;
+          background-color: @surface0;
+          border-color: @accent;
         }
 
         &:hover + span {
-          background-color: darken(@accent, 5%) !important;
-          border-color: @surface0 !important;
+          background-color: darken(@accent, 5%);
+          border-color: @surface0;
         }
       }
 
       &:disabled + span {
-        border-color: @mantle !important;
+        border-color: @mantle;
+      }
+    }
+
+    .oo-ui-inputWidget-input {
+      border-color: @overlay0 !important;
+
+      &:hover {
+        background-color: fade(@accent, 30%) !important;
+      }
+
+      &:focus, &:focus-within {
+        border-color: @accent !important;
+      }
+
+      &:active {
+        color: @base !important;
+        background-color: darken(@accent, 10%) !important;
+      }
+    }
+
+    .oo-ui-buttonElement-button {
+      color: @text !important;
+      background-color: @surface0 !important;
+      border-color: @overlay0 !important;
+
+      &:hover {
+        background-color: fade(@accent, 30%) !important;
+      }
+
+      &:focus, &:focus-within {
+        border-color: @accent !important;
+      }
+
+      &:active {
+        background-color: darken(@accent, 10%) !important;
+
+        .oo-ui-indicatorElement-indicator {
+          filter: @base-filter !important;
+        }
       }
     }
 
