--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -30,8 +30,7 @@
           color: @sky !important;
         }
 
-        &:active,
-        &:focus-within {
+        &:active, &:focus, &:focus-within {
           color: @sapphire !important;
         }
 
@@ -75,8 +74,7 @@
         border-color: @surface2 !important;
       }
 
-      &:active,
-      &:focus-within {
+      &:active, &:focus, &:focus-within {
         background-color: fade(@accent, 30%) !important;
       }
 
@@ -103,8 +101,7 @@
           color: @sky !important;
         }
 
-        &:active,
-        &:focus-within {
+        &:active, &:focus, &:focus-within {
           color: @sapphire !important;
         }
 
@@ -112,6 +109,11 @@
           color: @lavender !important;
         }
       }
+    }
+
+    input[type="radio"] {
+      background-color: @surface0 !important;
+      accent-color: @accent !important;
     }
 
     .cdx-button:has(.mw-ui-icon-wikimedia-expand) {
@@ -129,8 +131,7 @@
         background-color: @surface1 !important;
       }
 
-      &:active,
-      &:focus-within {
+      &:active, &:focus, &:focus-within {
         background-color: @surface2 !important;
       }
 
@@ -150,8 +151,7 @@
         fill: darken(@accent, 5%) !important;
       }
 
-      &:active,
-      &:focus-within {
+      &:active, &:focus, &:focus-within {
         fill: darken(@accent, 10%) !important;
       }
 
@@ -181,8 +181,7 @@
         filter: @text-filter !important;
       }
 
-      &:active,
-      &:focus-within {
+      &:active, &:focus, &:focus-within {
         filter: @accent-filter !important;
       }
 
@@ -198,8 +197,7 @@
         background-color: @accent !important;
       }
 
-      &:active,
-      &:focus-within {
+      &:active, &:focus, &:focus-within {
         background-color: darken(@accent, 5%) !important;
       }
 
@@ -217,7 +215,7 @@
       background-color: @surface0 !important;
       border-color: @surface1 !important;
 
-      &:active, &:focus-within {
+      &:active, &:focus, &:focus-within {
         border-color: @accent !important;
       }
 
@@ -356,6 +354,62 @@
 
     #mixins.table();
 
+    table.diff {
+      tr.diff-title {
+        background-color: @mantle !important;
+
+        td {
+          background-color: @surface0 !important;
+
+          &.diff-side-deleted {
+            #mw-diff-otitle1, #mw-diff-ntitle1 {
+              background-color: fade(@red, 30%) !important;
+              border-color: transparent !important; // Upstream is borderless.
+
+              strong, strong a {
+                color: @red !important;
+              }
+            }
+          }
+
+          &.diff-side-added {
+            #mw-diff-otitle1, #mw-diff-ntitle1 {
+              background-color: fade(@green, 30%) !important;
+              border-color: transparent !important; // Upstream is borderless.
+
+              strong, strong a {
+                color: @green !important;
+              }
+            }
+          }
+        }
+      }
+
+      tr {
+        td.diff-addedline {
+          border-color: @green !important;
+
+          ins.diffchange {
+            color: @green !important;
+            background-color: fade(@green, 30%) !important;
+          }
+        }
+
+        td.diff-deletedline {
+          border-color: @red !important;
+
+          ins.diffchange {
+            color: @red !important;
+            background-color: fade(@red, 30%) !important;
+          }
+        }
+      }
+    }
+
+    .ve-ui-diffElement-no-changes {
+      color: @subtext0 !important;
+    }
+
     dl {
       background-color: inherit !important;
       border-color: @overlay0 !important;
@@ -408,7 +462,7 @@
               color: darken(@base, 5%) !important;
             }
 
-            &:active, &:focus-within {
+            &:active, &:focus, &:focus-within {
               color: darken(@base, 10%) !important;
             }
 
@@ -445,7 +499,7 @@
             }
 
             &:active,
-            &:focus-within {
+            &:focus, &:focus-within {
               color: darken(@accent, 10%) !important;
             }
 
@@ -521,7 +575,7 @@
             color: @sky !important;
           }
 
-          &:active, &:focus-within {
+          &:active, &:focus, &:focus-within {
             color: @sapphire !important;
           }
 
@@ -548,7 +602,7 @@
           color: @sky !important;
         }
 
-        &:active, &:focus-within {
+        &:active, &:focus, &:focus-within {
           color: @sapphire !important;
         }
 
@@ -1399,8 +1453,7 @@
                 background-color: @surface1 !important;
               }
 
-              &:active,
-              &:focus-within {
+              &:active, &:focus, &:focus-within {
                 color: @base !important;
                 background-color: @accent !important;
               }
@@ -1431,8 +1484,7 @@
                 background-color: darken(@accent, 5%) !important;
               }
 
-              &:active,
-              &:focus-within {
+              &:active, &:focus, &:focus-within {
                 background-color: darken(@accent, 10%) !important;
               }
             }
