Add inputWidget-input, and buttonElement-button.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -342,6 +342,45 @@
       }
     }
 
+    .oo-ui-inputWidget-input {
+      border-color: @overlay0 !important;
+
+      &:hover {
+        background-color: fade(@accent, 30%) !important;
+      }
+
+      &:focus, &:focus-within {
+        border-color: @accent !important;
+      }
+
+      &:active {
+        color: @base !important;
+        background-color: darken(@accent, 10%) !important;
+      }
+    }
+
+    .oo-ui-buttonElement-button {
+      color: @text !important;
+      background-color: @surface0 !important;
+      border-color: @overlay0 !important;
+
+      &:hover {
+        background-color: fade(@accent, 30%) !important;
+      }
+
+      &:focus, &:focus-within {
+        border-color: @accent !important;
+      }
+
+      &:active {
+        background-color: darken(@accent, 10%) !important;
+
+        .oo-ui-indicatorElement-indicator {
+          filter: @base-filter !important;
+        }
+      }
+    }
+
     /* View source */
     textarea {
       background-color: @mantle;
