feat(brave-search): add style for settings page

--- a/styles/brave-search/catppuccin.user.less
+++ b/styles/brave-search/catppuccin.user.less
@@ -92,7 +92,8 @@
     }
 
     /* Settings */
-
+    --color-page-background: @base;
+    --color-container-background: @surface0;
     --color-primary-50: @accent; // icons
 
     .form-switch {
