Fix diffs for wiki.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -351,40 +351,75 @@
     }
 
     .oo-ui-inputWidget-input {
-      border-color: @overlay0 !important;
+      border-color: @overlay0;
 
       &:hover {
-        background-color: fade(@accent, 30%) !important;
+        background-color: fade(@accent, 30%);
       }
 
       &:focus, &:focus-within {
-        border-color: @accent !important;
+        border-color: @accent;
       }
 
       &:active {
-        color: @base !important;
-        background-color: darken(@accent, 10%) !important;
+        color: @base;
+        background-color: darken(@accent, 10%);
       }
     }
 
-    .oo-ui-buttonElement-button {
-      color: @text !important;
-      background-color: @surface0 !important;
-      border-color: @overlay0 !important;
+    /* Inactive Button */
+    :not(.oo-ui-optionWidget-selected, .oo-ui-buttonElement-active)
+      .oo-ui-buttonElement-button {
+      color: @text;
+      background-color: @surface0;
+      border-color: @overlay0;
+      .oo-ui-iconElement-icon {
+        filter: @text-filter;
+      }
 
       &:hover {
-        background-color: fade(@accent, 30%) !important;
+        background-color: fade(@accent, 30%);
       }
 
       &:focus, &:focus-within {
-        border-color: @accent !important;
+        border-color: @accent;
       }
 
       &:active {
-        background-color: darken(@accent, 10%) !important;
+        color: @base;
+        background-color: darken(@accent, 10%);
 
-        .oo-ui-indicatorElement-indicator {
-          filter: @base-filter !important;
+        .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
+          filter: @base-filter;
+        }
+      }
+    }
+
+    /* Active Button */
+    :is(.oo-ui-optionWidget-selected, .oo-ui-buttonElement-active)
+      .oo-ui-buttonElement-button {
+      color: @base;
+      background-color: darken(@accent, 10%);
+      border-color: @overlay0;
+
+      .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
+        filter: @base-filter;
+      }
+
+      &:hover {
+        background-color: fade(@accent, 30%);
+      }
+
+      &:focus, &:focus-within {
+        border-color: @accent;
+      }
+
+      &:active {
+        color: @base;
+        background-color: darken(@accent, 10%);
+
+        .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
+          filter: @base-filter;
         }
       }
     }
