--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -312,6 +312,22 @@
       border-color: @overlay1 !important;
     }
 
+    del,
+    [data-diff-action="remove"],
+    [data-diff-action="change-remove"] {
+      color: @red !important;
+      background-color: fade(@red, 30%) !important;
+      box-shadow: none !important;
+    }
+
+    ins,
+    [data-diff-action="insert"],
+    [data-diff-action="change-insert"] {
+      color: @green !important;
+      background-color: fade(@green, 30%) !important;
+      box-shadow: none !important;
+    }
+
     img, p {
       color: @text !important;
     }
@@ -364,7 +380,7 @@
           &.diff-side-deleted {
             #mw-diff-otitle1, #mw-diff-ntitle1 {
               background-color: fade(@red, 30%) !important;
-              border-color: transparent !important; // Upstream is borderless.
+              box-shadow: none !important;
 
               strong, strong a {
                 color: @red !important;
@@ -375,7 +391,7 @@
           &.diff-side-added {
             #mw-diff-otitle1, #mw-diff-ntitle1 {
               background-color: fade(@green, 30%) !important;
-              border-color: transparent !important; // Upstream is borderless.
+              box-shadow: none !important;
 
               strong, strong a {
                 color: @green !important;
@@ -389,24 +405,27 @@
         td.diff-addedline {
           border-color: @green !important;
 
-          ins.diffchange {
+          .diffchange {
             color: @green !important;
             background-color: fade(@green, 30%) !important;
+            box-shadow: none !important;
           }
         }
 
-        td.diff-deletedline {
+        .diff-deletedline {
           border-color: @red !important;
 
-          ins.diffchange {
+          .diffchange {
             color: @red !important;
             background-color: fade(@red, 30%) !important;
+            box-shadow: none !important;
           }
         }
       }
     }
 
-    .ve-ui-diffElement-no-changes {
+    .ve-ui-diffElement-no-changes,
+    .ve-ui-diffElement-attributeChange {
       color: @subtext0 !important;
     }
 
