Whoops, messed up the last one. Fix this up.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -278,6 +278,25 @@
       background-image: url("data:image/svg+xml,@{svg}");
     }
 
+    /* Basic Widget */
+    .oo-ui-inputWidget-input {
+      border-color: @overlay0;
+
+      &:hover {
+        background-color: fade(@accent, 30%);
+      }
+
+      &:focus, &:focus-within {
+        border-color: @accent;
+      }
+
+      &:active {
+        color: @base;
+        background-color: darken(@accent, 10%);
+      }
+    }
+
+    /* Codex Radio Input */
     .cdx-radio__input {
       + .cdx-radio__icon, &:enabled + .cdx-radio__icon {
         background-color: @base;
@@ -310,6 +329,7 @@
       }
     }
 
+    /* Radio Input */
     .oo-ui-radioInputWidget [type="radio"] {
       + span, &:enabled + span {
         background-color: @base;
@@ -339,6 +359,63 @@
 
       &:disabled + span {
         border-color: @mantle;
+      }
+    }
+
+    /* Inactive Button */
+    :not(.oo-ui-optionWidget-selected, .oo-ui-buttonElement-active)
+      .oo-ui-buttonElement-button {
+      color: @text;
+      background-color: @surface0;
+      border-color: @overlay0;
+      .oo-ui-iconElement-icon {
+        filter: @text-filter;
+      }
+
+      &:hover {
+        background-color: fade(@accent, 30%);
+      }
+
+      &:focus, &:focus-within {
+        border-color: @accent;
+      }
+
+      &:active {
+        color: @base;
+        background-color: darken(@accent, 10%);
+
+        .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
+          filter: @base-filter;
+        }
+      }
+    }
+
+    /* Active Button */
+    :is(.oo-ui-optionWidget-selected, .oo-ui-buttonElement-active)
+      .oo-ui-buttonElement-button {
+      color: @base;
+      background-color: darken(@accent, 10%);
+      border-color: @overlay0;
+
+      .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
+        filter: @base-filter;
+      }
+
+      &:hover {
+        background-color: fade(@accent, 30%);
+      }
+
+      &:focus, &:focus-within {
+        border-color: @accent;
+      }
+
+      &:active {
+        color: @base;
+        background-color: darken(@accent, 10%);
+
+        .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
+          filter: @base-filter;
+        }
       }
     }
 
