Invert icons based on their classes/nested classes.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -278,6 +278,33 @@
       background-image: url("data:image/svg+xml,@{svg}");
     }
 
+    /* Non-Inverted Icons */
+    :not(.cdx-icon) svg,
+    :not(.skin-invert-image) img,
+    .oo-ui-iconElement-icon:is(
+      .oo-ui-image-progressive,
+      .oo-ui-image-destructive,
+      .oo-ui-checkboxInputWidget-checkIcon,
+      .oo-ui-image-invert,
+      .mw-no-invert
+    ) {
+      filter: @base-filter !important;
+    }
+
+    /* Inverted Icons */
+    .cdx-icon svg,
+    .skin-invert-image img,
+    .skin-invert,
+    .oo-ui-iconElement-icon:not(
+      .oo-ui-image-progressive,
+      .oo-ui-image-destructive,
+      .oo-ui-checkboxInputWidget-checkIcon,
+      .oo-ui-image-invert,
+      .mw-no-invert
+    ) {
+      filter: @text-filter !important;
+    }
+
     /* Basic Widget */
     .oo-ui-inputWidget-input {
       border-color: @overlay0;
@@ -307,7 +334,9 @@
         background-color: @accent;
       }
 
-      &:active + .cdx-radio__icon, &:focus-within + .cdx-radio__icon {
+      &:active + .cdx-radio__icon,
+      &:focus + .cdx-radio__icon,
+      &:focus-within + .cdx-radio__icon {
         background-color: darken(@accent, 10%);
         border-color: @surface0;
       }
@@ -340,7 +369,9 @@
         background-color: @accent;
       }
 
-      &:active + span, &:focus-within + span {
+      &:active + span,
+      &:focus + span,
+      &:focus-within + span {
         background-color: darken(@accent, 10%);
         border-color: @surface0;
       }
@@ -368,9 +399,6 @@
       color: @text;
       background-color: @surface0;
       border-color: @overlay0;
-      .oo-ui-iconElement-icon {
-        filter: @text-filter;
-      }
 
       &:hover {
         background-color: fade(@accent, 30%);
@@ -383,10 +411,6 @@
       &:active {
         color: @base;
         background-color: darken(@accent, 10%);
-
-        .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
-          filter: @base-filter;
-        }
       }
     }
 
@@ -397,10 +421,6 @@
       background-color: darken(@accent, 10%);
       border-color: @overlay0;
 
-      .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
-        filter: @base-filter;
-      }
-
       &:hover {
         background-color: fade(@accent, 30%);
       }
@@ -412,10 +432,6 @@
       &:active {
         color: @base;
         background-color: darken(@accent, 10%);
-
-        .oo-ui-indicatorElement-indicator, .oo-ui-iconElement-icon {
-          filter: @base-filter;
-        }
       }
     }
 
