Add error, move to minify slightly.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -564,7 +564,11 @@
       color: @lavender !important;
     }
 
-    .errorlist {
+    // Error/Error List/Flagged (Out-Of-Date)
+    .error,
+    .errorlist,
+    .flagged,
+    .flagged a {
       color: @red !important;
     }
 
@@ -948,11 +952,6 @@
         background-color: @surface0 !important;
         border-color: @surface1 !important;
       }
-    }
-
-    .flagged,
-    .flagged a {
-      color: @red !important;
     }
 
     // Big syntax highlighting block! Powered by cgit and highlight.js.
