Add background-color inherit to fix delete-comment bug.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -919,6 +919,7 @@
       filter: @text-filter !important;
 
       &:hover {
+        background-color: inherit !important;
         filter: @accent-filter !important;
       }
     }
