fix(youtube): fix shorts navigation bar background

--- a/styles/youtube/catppuccin.user.less
+++ b/styles/youtube/catppuccin.user.less
@@ -1238,6 +1238,11 @@
         color: @text;
       }
     }
+
+    /* Fix shorts navigation bar background */
+    .navigation-container.ytd-shorts {
+      background: @base;
+    }
   }
 }
 
