feat(galileo): add circle icon color

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -35,6 +35,12 @@
     #lib.palette();
     #lib.defaults();
 
+    .card .circle-icon {
+      background: @maroon !important;
+    }
 
+    .card.focused .circle-icon {
+      background: @red !important;
+    }
   }
 }
