feat(brave-search): use background-image instead of background

--- a/styles/brave-search/catppuccin.user.less
+++ b/styles/brave-search/catppuccin.user.less
@@ -117,11 +117,11 @@
     }
 
     .download-cta-background::before {
-      background: linear-gradient(
+      background-image: linear-gradient(
         90deg,
         @surface0 0%,
         @surface1 100%
-      ) border-box !important;
+      ) !important;
       mask: none;
     }
 
@@ -160,12 +160,12 @@
       }
     }
     .suggestion.ask .ask-badge::before {
-      background: linear-gradient(
+      background-image: linear-gradient(
         352deg,
         fade(@peach, 15%) 3%,
         fade(@pink, 15%) 40%,
         fade(@mauve, 15%) 99%
-      ) border-box;
+      );
     }
 
     #logo img, #nav-logo img, .logo-large {
