feat(galileo): partially theme navbar

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -35,12 +35,41 @@
     #lib.palette();
     #lib.defaults();
 
+    .navbar.top {
+      background: @base !important;
+    }
+
+    .navbar.bottom {
+      background: @blue !important;
+    }
+
+    .navbar.top #navbarDropdown, .nav-item {
+      background: @base !important;
+      color: @text !important;
+      fill: @text !important;
+    }
+
+    .navbar.top #navbarDropdown:, .nav-item:hover {
+      background: @text !important;
+      color: @base !important;
+      fill: @base !important;
+    }
+
+    header #header-container .navbar.top .navbar-nav li.nav-item {
+      border-left-color: @surface0 !important;
+    }
+
     .card .circle-icon {
       background: @maroon !important;
     }
 
     .card.focused .circle-icon {
       background: @red !important;
+    }
+
+    a.support {
+      background: @red !important;
+      color: @base !important;
     }
   }
 }
