--- a/styles/wikipedia/catppuccin.user.less
+++ b/styles/wikipedia/catppuccin.user.less
@@ -384,6 +384,21 @@
       background-image: linear-gradient(to left, transparent, @base 50%);
     }
 
+    /* Fullscreen images */
+    .cdx-button,
+    .mw-mmv-current-image-number {
+      background-color: fade(@surface0, 65%);
+      color: @text;
+
+      &:hover {
+        background-color: @surface1;
+      }
+    }
+
+    .cdx-button .mw-mmv-icon {
+      background-color: @text;
+    }
+
     /* Icons */
 
     img[alt="Edit this on Wikidata"],
