Comment spree, fix AUR register subdupe, write login as separate.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -18,6 +18,7 @@
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 @import "http://127.0.0.1:8000/lib/mediawiki.less";
 
+/// General Mixins
 #mixins {
   .a() {
     a,
@@ -230,6 +231,9 @@
   }
 }
 
+/// Globally Shared Styles
+
+// Everything
 // deno-fmt-ignore
 @-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(.+\\.)*archlinux\\.org(?:\\/.*)+") {
   :root {
@@ -631,233 +635,6 @@
     }
   }
 }
-
-// Arch Official Repository
-@-moz-document url-prefix("https://archlinux.org/packages") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archnavbar ul#archnavbarlist li#anb-packages a {
-      color: @accent !important;
-    }
-  }
-}
-
-// Arch User Repository
-@-moz-document domain("aur.archlinux.org") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archnavbar ul#archnavbarlist li#anb-aur a {
-      color: @accent !important;
-    }
-  }
-}
-
-// AUR: Dashboard
-@-moz-document url("https://aur.archlinux.org/") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archdev-navbar ul li {
-      a[href="/"] {
-        color: @accent !important;
-      }
-    }
-  }
-}
-
-// AUR: Packages
-@-moz-document url-prefix("https://aur.archlinux.org/packages") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archdev-navbar ul li {
-      a[href="/packages"] {
-        color: @accent !important;
-      }
-    }
-  }
-}
-
-// AUR: Requests
-@-moz-document url-prefix("https://aur.archlinux.org/requests") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archdev-navbar ul li {
-      a[href="/requests"] {
-        color: @accent !important;
-      }
-    }
-  }
-}
-
-// AUR: Requests
-@-moz-document url-prefix("https://aur.archlinux.org/register") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archdev-navbar ul li {
-      a[href="/register"] {
-        color: @accent !important;
-      }
-    }
-  }
-}
-
-// AUR: Requests
-@-moz-document url-prefix("https://aur.archlinux.org/login?next=/register") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archdev-navbar ul li {
-      a[href="/login?next=/register"] {
-        color: @accent !important;
-      }
-    }
-  }
-}
-
-// deno-fmt-ignore // AUR: My Account
-@-moz-document regexp("https:\\/\\/aur\\.archlinux\\.org\\/accounts\\/.*\\/edit(?:\\/.*)?") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archdev-navbar ul li {
-      a[href="/packages"] {
-        color: @accent !important;
-      }
-    }
-  }
-}
-
-// Arch Security
-@-moz-document url-prefix("https://security.archlinux.org/") {
-  :root {
-    @media (prefers-color-scheme: light) {
-      #catppuccin(@lightFlavor);
-    }
-
-    @media (prefers-color-scheme: dark) {
-      #catppuccin(@darkFlavor);
-    }
-  }
-
-  #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
-    #lib.css-variables();
-
-    #archnavbar ul li#anb-security a {
-      color: @accent !important;
-    }
-
-    .navbar ul li {
-      a[href="/"], b {
-        color: @accent !important;
-      }
-    }
-  }
-}
-
-/// Other Specific Rules
 
 // Home, and Both Package Repositories
 @-moz-document url("https://archlinux.org/"),
@@ -1272,7 +1049,233 @@
   }
 }
 
-// Arch BBS Forums
+/// Arch Official Repository
+@-moz-document url-prefix("https://archlinux.org/packages") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archnavbar ul#archnavbarlist li#anb-packages a {
+      color: @accent !important;
+    }
+  }
+}
+
+/// Arch User Repository
+@-moz-document domain("aur.archlinux.org") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archnavbar ul#archnavbarlist li#anb-aur a {
+      color: @accent !important;
+    }
+  }
+}
+
+// AUR: Dashboard
+@-moz-document url("https://aur.archlinux.org/") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+// AUR: Login
+@-moz-document url-prefix("https://aur.archlinux.org/login") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/login?next=/"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+// AUR: Packages
+@-moz-document url-prefix("https://aur.archlinux.org/packages") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/packages"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+// AUR: Register
+@-moz-document url-prefix("https://aur.archlinux.org/register") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/register"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+// AUR: Requests
+@-moz-document url-prefix("https://aur.archlinux.org/requests") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/requests"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+// AUR: My Account
+// deno-fmt-ignore
+@-moz-document regexp("https:\\/\\/aur\\.archlinux\\.org\\/accounts\\/.*\\/edit(?:\\/.*)?") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archdev-navbar ul li {
+      a[href="/packages"] {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+/// Arch Security
+@-moz-document url-prefix("https://security.archlinux.org/") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+    #lib.css-variables();
+
+    #archnavbar ul li#anb-security a {
+      color: @accent !important;
+    }
+
+    .navbar ul li {
+      a[href="/"], b {
+        color: @accent !important;
+      }
+    }
+  }
+}
+
+/// Arch BBS Forums
 @-moz-document domain("bbs.archlinux.org") {
   :root {
     @media (prefers-color-scheme: light) {
@@ -1759,6 +1762,7 @@
   }
 }
 
+/// Arch Manpages
 @-moz-document url-prefix("https://man.archlinux.org") {
   :root {
     @media (prefers-color-scheme: light) {
