Make comment-header apply to base as well, required for some other comment-headers.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -704,10 +704,8 @@
       }
     }
 
-    .comment-header {
-      .edited {
-        color: @subtext0 !important;
-      }
+    .comment-header, .comment-header .edited {
+      color: @subtext0 !important;
     }
 
     .widget:is(
