Add settings menu filter vars! Luckily docs.rs defines nice vars, huh?
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/docs.rs/catppuccin.user.less
+++ b/styles/docs.rs/catppuccin.user.less
@@ -73,6 +73,8 @@
     --settings-input-border-color: @surface0;
     --settings-button-color: @text;
     --settings-button-border-focus: @accent;
+    --settings-menu-filter: @subtext0-filter;
+    --settings-menu-hover-filter: @subtext1-filter;
     --sidebar-background-color: @mantle;
     --sidebar-background-color-hover: @crust;
     --source-sidebar-background-selected: @surface0;
