--- a/styles/docs.rs/catppuccin.user.less
+++ b/styles/docs.rs/catppuccin.user.less
@@ -77,6 +77,9 @@
     --settings-menu-hover-filter: @subtext1-filter;
     --sidebar-background-color: @mantle;
     --sidebar-background-color-hover: @crust;
+    --sidebar-border-color: @overlay1;
+    --sidebar-resizer-hover: @sky;
+    --sidebar-resizer-active: @sapphire;
     --source-sidebar-background-selected: @surface0;
     --source-sidebar-background-hover: @base;
     --code-block-background-color: @mantle;
@@ -172,8 +175,6 @@
     --scrape-example-help-hover-color: @text;
     --scrape-example-code-wrapper-background-start: @base;
     --scrape-example-code-wrapper-background-end: @base;
-    --sidebar-resizer-hover: @sky;
-    --sidebar-resizer-active: @sapphire;
 
     select {
       background-color: @mantle;
