Add some old bug page theming.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -301,6 +301,74 @@
 
     #mixins.a();
 
+    em:has(+ .DoNotPrint) {
+      color: @subtext0 !important;
+    }
+
+    #submenu a {
+      background-color: @surface0 !important;
+      border-color: @overlay0 !important;
+
+      &.active {
+        background-color: @mantle !important;
+        border-bottom-color: transparent !important;
+      }
+    }
+
+    #taskdetails {
+      color: @subtext0 !important;
+      background-color: @mantle !important;
+      border-color: @overlay0 !important;
+
+      * {
+        border-color: @overlay1 !important;
+      }
+
+      table > tbody > :is(tr, tr:hover) > td {
+        background-color: @base !important;
+        border-color: @overlay0 !important;
+
+        #taskfields table {
+          > tbody > tr:nth-child(2n + 1) > :is(th, td) {
+            background-color: @surface0 !important;
+          }
+          > tbody > tr:nth-child(2n) > :is(th, td) {
+            background-color: @surface1 !important;
+          }
+
+          #percent + td > img {
+            filter: @peach-filter !important;
+
+            &[src="../themes/ArchLinux/percent-0.png"] {
+              filter: @red-filter !important;
+            }
+
+            &[src="../themes/ArchLinux/percent-100.png"] {
+              filter: @green-filter !important;
+            }
+          }
+        }
+      }
+
+      #taskclosed {
+        background-color: @base !important;
+        border-color: @red !important;
+      }
+    }
+
+    #comments {
+      background-color: @mantle !important;
+      border-color: @overlay0 !important;
+      fieldset {
+        background-color: @surface0 !important;
+        border-color: @overlay0 !important;
+      }
+
+      .comment .commenttext {
+        color: @text !important;
+      }
+    }
+
     blockquote, .quotebox {
       color: @text !important;
       border-color: @accent !important;
