Add mw-file-element. Remove importance from filters, breaks icons. Add intl support!
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -235,7 +235,7 @@
 
 // Everything
 // deno-fmt-ignore
-@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(.+\\.)*archlinux\\.org(?:\\/.*)+") {
+@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(.+\\.)*archlinux(?:\\.de|\\.org|\\.jp|cn\\.org)(?:\\/.*)+") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
@@ -1709,8 +1709,9 @@
   }
 }
 
-// Arch Wiki
-@-moz-document domain("wiki.archlinux.org") {
+/// Arch Wiki
+// deno-fmt-ignore
+@-moz-document regexp("^https:\\/\\/wiki\\.archlinux(?:\\.de|\\.org|\\.jp|cn\\.org)(?:\\/.*)+") {
   :root.skin-theme-clientpref-os,
   .vector-feature-night-mode-enabled,
   .skin-invert,
